Kostas/parser.output
State 12 conflicts: 5 reduce/reduce
State 13 conflicts: 5 reduce/reduce
State 41 conflicts: 2 shift/reduce
State 42 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_identifier program
    2        | ε
    3        | error program

    4 VAR_NAME: CLASS_NAME
    5         | IDENT

    6 $@1: ε

    7 class_identifier: PUBLIC CLASS CLASS_NAME CURLY_BRACKET_LEFT $@1 class_body CURLY_BRACKET_RIGHT

    8 class_body: ε
    9           | functions class_body
   10           | class_members class_body
   11           | class_identifier class_body

   12 class_members: variable_declaration SEMICOLON
   13              | variable_initialization SEMICOLON
   14              | variable_assignment SEMICOLON
   15              | member_access SEMICOLON
   16              | class_instance SEMICOLON

   17 visibility: ε
   18           | PUBLIC
   19           | PRIVATE

   20 $@2: ε

   21 variable_declaration: visibility data_type VAR_NAME $@2 next_declaration

   22 next_declaration: ε

   23 $@3: ε

   24 next_declaration: COMMA VAR_NAME $@3 next_declaration

   25 $@4: ε

   26 variable_initialization: visibility arithmetic_type VAR_NAME EQUAL_SIGN expression $@4 next_initialization_exp

   27 $@5: ε

   28 variable_initialization: visibility non_arithmetic_type VAR_NAME EQUAL_SIGN non_arithmetic_value $@5 next_initialization

   29 next_initialization_exp: ε

   30 $@6: ε

   31 next_initialization_exp: COMMA VAR_NAME EQUAL_SIGN expression $@6 next_initialization_exp

   32 next_initialization: ε

   33 $@7: ε

   34 next_initialization: COMMA VAR_NAME EQUAL_SIGN non_arithmetic_value $@7 next_initialization

   35 variable_assignment: VAR_NAME EQUAL_SIGN data

   36 data: expression
   37     | non_arithmetic_value

   38 expression: INT_VALUE
   39           | DOUBLE_VALUE
   40           | VAR_NAME
   41           | member_access
   42           | expression PLUS expression
   43           | expression MINUS expression
   44           | expression MULTIPLY expression
   45           | expression DIVIDE expression
   46           | BRACKET_LEFT expression BRACKET_RIGHT
   47           | MINUS expression

   48 data_type: arithmetic_type
   49          | non_arithmetic_type

   50 arithmetic_type: INT
   51                | DOUBLE

   52 non_arithmetic_type: CHAR
   53                    | BOOLEAN
   54                    | STRING

   55 non_arithmetic_value: CHAR_VALUE
   56                     | BOOLEAN_VALUE
   57                     | STRING_VALUE

   58 class_instance: CLASS_NAME VAR_NAME EQUAL_SIGN NEW CLASS_NAME BRACKET_LEFT BRACKET_RIGHT

   59 member_access: VAR_NAME DOT VAR_NAME

   60 $@8: ε

   61 member_access: VAR_NAME DOT VAR_NAME BRACKET_LEFT $@8 parameters_start BRACKET_RIGHT

   62 $@9: ε

   63 functions: function_visibility VOID VAR_NAME BRACKET_LEFT $@9 arguments_start BRACKET_RIGHT CURLY_BRACKET_LEFT inside_void_function CURLY_BRACKET_RIGHT

   64 $@10: ε

   65 functions: function_visibility data_type VAR_NAME BRACKET_LEFT $@10 arguments_start BRACKET_RIGHT CURLY_BRACKET_LEFT inside_function CURLY_BRACKET_RIGHT

   66 function_visibility: PRIVATE
   67                    | PUBLIC

   68 arguments_start: ε
   69                | arguments

   70 $@11: ε

   71 arguments: data_type VAR_NAME $@11 arguments_end

   72 arguments_end: ε
   73              | COMMA arguments

   74 inside_void_function: inside_brackets
   75                     | inside_brackets RETURN SEMICOLON

   76 inside_function: inside_brackets RETURN VAR_NAME SEMICOLON
   77                | inside_brackets RETURN non_arithmetic_value SEMICOLON

   78 $@12: ε

   79 function_call: VAR_NAME BRACKET_LEFT $@12 parameters_start BRACKET_RIGHT

   80 parameters_start: ε
   81                 | parameters

   82 $@13: ε

   83 parameters: VAR_NAME $@13 parameters_end

   84 $@14: ε

   85 parameters: VAR_NAME DOT VAR_NAME $@14 parameters_end

   86 $@15: ε

   87 parameters: non_arithmetic_value $@15 parameters_end

   88 parameters_end: ε
   89               | COMMA parameters

   90 inside_brackets: ε

   91 $@16: ε

   92 inside_brackets: loops_n_condition $@16 inside_brackets
   93                | function_call SEMICOLON inside_brackets
   94                | print SEMICOLON inside_brackets
   95                | class_members inside_brackets

   96 loops_n_condition: for_statement
   97                  | switch
   98                  | do_while
   99                  | if

  100 for_statement: FOR BRACKET_LEFT for_condition BRACKET_RIGHT CURLY_BRACKET_LEFT inside_brackets_loop CURLY_BRACKET_RIGHT

  101 for_condition: for_variable SEMICOLON condition SEMICOLON for_step

  102 for_variable: ε
  103             | variable_initialization
  104             | variable_assignment

  105 condition: ε
  106          | expression CONDITION_SYMBOL expression bool_operator
  107          | VAR_NAME bool_operator
  108          | BOOLEAN_VALUE bool_operator

  109 bool_operator: ε
  110              | BOOL_SYMBOL condition

  111 for_step: ε
  112         | VAR_NAME step

  113 step: INCREAMENT_DECREAMENT
  114     | LOOP_STEP expression

  115 inside_brackets_loop: inside_brackets
  116                     | inside_brackets BREAK SEMICOLON inside_brackets

  117 do_while: DO CURLY_BRACKET_LEFT inside_brackets_loop CURLY_BRACKET_RIGHT WHILE BRACKET_LEFT condition BRACKET_RIGHT SEMICOLON

  118 switch: SWITCH BRACKET_LEFT expression BRACKET_RIGHT CURLY_BRACKET_LEFT case default CURLY_BRACKET_RIGHT

  119 case: CASE expression COLON switch_content case
  120     | ε

  121 switch_content: ε
  122               | inside_brackets BREAK SEMICOLON

  123 default: DEFAULT COLON switch_content
  124        | ε

  125 if: IF BRACKET_LEFT condition BRACKET_RIGHT CURLY_BRACKET_LEFT inside_brackets CURLY_BRACKET_RIGHT else_if

  126 else_if: ELSE IF BRACKET_LEFT condition BRACKET_RIGHT CURLY_BRACKET_LEFT inside_brackets CURLY_BRACKET_RIGHT else_if
  127        | else

  128 else: ε
  129     | ELSE CURLY_BRACKET_LEFT inside_brackets CURLY_BRACKET_RIGHT

  130 print: PRINT BRACKET_LEFT STRING_VALUE after_print BRACKET_RIGHT

  131 after_print: ε
  132            | COMMA VAR_NAME after_print


Terminals, with rules where they appear

    $end (0) 0
    error (256) 3
    CURLY_BRACKET_LEFT (258) 7 63 65 100 117 118 125 126 129
    CURLY_BRACKET_RIGHT (259) 7 63 65 100 117 118 125 126 129
    BRACKET_LEFT (260) 46 58 61 63 65 79 100 117 118 125 126 130
    BRACKET_RIGHT (261) 46 58 61 63 65 79 100 117 118 125 126 130
    EQUAL_SIGN (262) 26 28 31 34 35 58
    SEMICOLON (263) 12 13 14 15 16 75 76 77 93 94 101 116 117 122
    COLON (264) 119 123
    COMMA (265) 24 31 34 73 89 132
    DOT (266) 59 61 85
    PLUS (267) 42
    MINUS (268) 43 47
    MULTIPLY (269) 44
    DIVIDE (270) 45
    UMINUS (271)
    PUBLIC <sval> (272) 7 18 67
    PRIVATE <sval> (273) 19 66
    CLASS (274) 7
    CLASS_NAME <sval> (275) 4 7 58
    NEW (276) 58
    IF (277) 125 126
    ELSE (278) 126 129
    FOR (279) 100
    DO (280) 117
    WHILE (281) 117
    CONDITION_SYMBOL (282) 106
    BOOL_SYMBOL (283) 110
    INCREAMENT_DECREAMENT (284) 113
    LOOP_STEP (285) 114
    SWITCH (286) 118
    CASE (287) 119
    DEFAULT (288) 123
    BREAK (289) 116 122
    RETURN (290) 75 76 77
    PRINT (291) 130
    IDENT <sval> (292) 5
    VOID <sval> (293) 63
    INT <sval> (294) 50
    CHAR <sval> (295) 52
    DOUBLE <sval> (296) 51
    BOOLEAN <sval> (297) 53
    STRING <sval> (298) 54
    INT_VALUE <ival> (299) 38
    CHAR_VALUE <sval> (300) 55
    DOUBLE_VALUE <dval> (301) 39
    BOOLEAN_VALUE <sval> (302) 56 108
    STRING_VALUE <sval> (303) 57 130


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program (50)
        on left: 1 2 3
        on right: 0 1 3
    VAR_NAME <sval> (51)
        on left: 4 5
        on right: 21 24 26 28 31 34 35 40 58 59 61 63 65 71 76 79 83 85 107 112 132
    class_identifier (52)
        on left: 7
        on right: 1 11
    $@1 (53)
        on left: 6
        on right: 7
    class_body (54)
        on left: 8 9 10 11
        on right: 7 9 10 11
    class_members (55)
        on left: 12 13 14 15 16
        on right: 10 95
    visibility <sval> (56)
        on left: 17 18 19
        on right: 21 26 28
    variable_declaration (57)
        on left: 21
        on right: 12
    $@2 (58)
        on left: 20
        on right: 21
    next_declaration (59)
        on left: 22 24
        on right: 21 24
    $@3 (60)
        on left: 23
        on right: 24
    variable_initialization (61)
        on left: 26 28
        on right: 13 103
    $@4 (62)
        on left: 25
        on right: 26
    $@5 (63)
        on left: 27
        on right: 28
    next_initialization_exp (64)
        on left: 29 31
        on right: 26 31
    $@6 (65)
        on left: 30
        on right: 31
    next_initialization (66)
        on left: 32 34
        on right: 28 34
    $@7 (67)
        on left: 33
        on right: 34
    variable_assignment <sval> (68)
        on left: 35
        on right: 14 104
    data (69)
        on left: 36 37
        on right: 35
    expression <dval> (70)
        on left: 38 39 40 41 42 43 44 45 46 47
        on right: 26 31 36 42 43 44 45 46 47 106 114 118 119
    data_type <sval> (71)
        on left: 48 49
        on right: 21 65 71
    arithmetic_type <sval> (72)
        on left: 50 51
        on right: 26 48
    non_arithmetic_type <sval> (73)
        on left: 52 53 54
        on right: 28 49
    non_arithmetic_value <sval> (74)
        on left: 55 56 57
        on right: 28 34 37 77 87
    class_instance (75)
        on left: 58
        on right: 16
    member_access (76)
        on left: 59 61
        on right: 15 41
    $@8 (77)
        on left: 60
        on right: 61
    functions (78)
        on left: 63 65
        on right: 9
    $@9 (79)
        on left: 62
        on right: 63
    $@10 (80)
        on left: 64
        on right: 65
    function_visibility <sval> (81)
        on left: 66 67
        on right: 63 65
    arguments_start (82)
        on left: 68 69
        on right: 63 65
    arguments (83)
        on left: 71
        on right: 69 73
    $@11 (84)
        on left: 70
        on right: 71
    arguments_end (85)
        on left: 72 73
        on right: 71
    inside_void_function (86)
        on left: 74 75
        on right: 63
    inside_function (87)
        on left: 76 77
        on right: 65
    function_call <sval> (88)
        on left: 79
        on right: 93
    $@12 (89)
        on left: 78
        on right: 79
    parameters_start (90)
        on left: 80 81
        on right: 61 79
    parameters (91)
        on left: 83 85 87
        on right: 81 89
    $@13 (92)
        on left: 82
        on right: 83
    $@14 (93)
        on left: 84
        on right: 85
    $@15 (94)
        on left: 86
        on right: 87
    parameters_end (95)
        on left: 88 89
        on right: 83 85 87
    inside_brackets (96)
        on left: 90 92 93 94 95
        on right: 74 75 76 77 92 93 94 95 115 116 122 125 126 129
    $@16 (97)
        on left: 91
        on right: 92
    loops_n_condition (98)
        on left: 96 97 98 99
        on right: 92
    for_statement (99)
        on left: 100
        on right: 96
    for_condition (100)
        on left: 101
        on right: 100
    for_variable (101)
        on left: 102 103 104
        on right: 101
    condition (102)
        on left: 105 106 107 108
        on right: 101 110 117 125 126
    bool_operator (103)
        on left: 109 110
        on right: 106 107 108
    for_step (104)
        on left: 111 112
        on right: 101
    step (105)
        on left: 113 114
        on right: 112
    inside_brackets_loop (106)
        on left: 115 116
        on right: 100 117
    do_while (107)
        on left: 117
        on right: 98
    switch (108)
        on left: 118
        on right: 97
    case (109)
        on left: 119 120
        on right: 118 119
    switch_content (110)
        on left: 121 122
        on right: 119 123
    default (111)
        on left: 123 124
        on right: 118
    if (112)
        on left: 125
        on right: 99
    else_if (113)
        on left: 126 127
        on right: 125 126
    else (114)
        on left: 128 129
        on right: 127
    print (115)
        on left: 130
        on right: 94
    after_print (116)
        on left: 131 132
        on right: 130 132


State 0

    0 $accept: • program $end

    error   shift, and go to state 1
    PUBLIC  shift, and go to state 2

    $end  reduce using rule 2 (program)

    program           go to state 3
    class_identifier  go to state 4


State 1

    3 program: error • program

    error   shift, and go to state 1
    PUBLIC  shift, and go to state 2

    $end  reduce using rule 2 (program)

    program           go to state 5
    class_identifier  go to state 4


State 2

    7 class_identifier: PUBLIC • CLASS CLASS_NAME CURLY_BRACKET_LEFT $@1 class_body CURLY_BRACKET_RIGHT

    CLASS  shift, and go to state 6


State 3

    0 $accept: program • $end

    $end  shift, and go to state 7


State 4

    1 program: class_identifier • program

    error   shift, and go to state 1
    PUBLIC  shift, and go to state 2

    $end  reduce using rule 2 (program)

    program           go to state 8
    class_identifier  go to state 4


State 5

    3 program: error program •

    $default  reduce using rule 3 (program)


State 6

    7 class_identifier: PUBLIC CLASS • CLASS_NAME CURLY_BRACKET_LEFT $@1 class_body CURLY_BRACKET_RIGHT

    CLASS_NAME  shift, and go to state 9


State 7

    0 $accept: program $end •

    $default  accept


State 8

    1 program: class_identifier program •

    $default  reduce using rule 1 (program)


State 9

    7 class_identifier: PUBLIC CLASS CLASS_NAME • CURLY_BRACKET_LEFT $@1 class_body CURLY_BRACKET_RIGHT

    CURLY_BRACKET_LEFT  shift, and go to state 10


State 10

    7 class_identifier: PUBLIC CLASS CLASS_NAME CURLY_BRACKET_LEFT • $@1 class_body CURLY_BRACKET_RIGHT

    $default  reduce using rule 6 ($@1)

    $@1  go to state 11


State 11

    7 class_identifier: PUBLIC CLASS CLASS_NAME CURLY_BRACKET_LEFT $@1 • class_body CURLY_BRACKET_RIGHT

    PUBLIC      shift, and go to state 12
    PRIVATE     shift, and go to state 13
    CLASS_NAME  shift, and go to state 14
    IDENT       shift, and go to state 15

    CURLY_BRACKET_RIGHT  reduce using rule 8 (class_body)
    $default             reduce using rule 17 (visibility)

    VAR_NAME                 go to state 16
    class_identifier         go to state 17
    class_body               go to state 18
    class_members            go to state 19
    visibility               go to state 20
    variable_declaration     go to state 21
    variable_initialization  go to state 22
    variable_assignment      go to state 23
    class_instance           go to state 24
    member_access            go to state 25
    functions                go to state 26
    function_visibility      go to state 27


State 12

    7 class_identifier: PUBLIC • CLASS CLASS_NAME CURLY_BRACKET_LEFT $@1 class_body CURLY_BRACKET_RIGHT
   18 visibility: PUBLIC •
   67 function_visibility: PUBLIC •

    CLASS  shift, and go to state 6

    VOID      reduce using rule 67 (function_visibility)
    INT       reduce using rule 18 (visibility)
    INT       [reduce using rule 67 (function_visibility)]
    CHAR      reduce using rule 18 (visibility)
    CHAR      [reduce using rule 67 (function_visibility)]
    DOUBLE    reduce using rule 18 (visibility)
    DOUBLE    [reduce using rule 67 (function_visibility)]
    BOOLEAN   reduce using rule 18 (visibility)
    BOOLEAN   [reduce using rule 67 (function_visibility)]
    STRING    reduce using rule 18 (visibility)
    STRING    [reduce using rule 67 (function_visibility)]
    $default  reduce using rule 18 (visibility)


State 13

   19 visibility: PRIVATE •
   66 function_visibility: PRIVATE •

    VOID      reduce using rule 66 (function_visibility)
    INT       reduce using rule 19 (visibility)
    INT       [reduce using rule 66 (function_visibility)]
    CHAR      reduce using rule 19 (visibility)
    CHAR      [reduce using rule 66 (function_visibility)]
    DOUBLE    reduce using rule 19 (visibility)
    DOUBLE    [reduce using rule 66 (function_visibility)]
    BOOLEAN   reduce using rule 19 (visibility)
    BOOLEAN   [reduce using rule 66 (function_visibility)]
    STRING    reduce using rule 19 (visibility)
    STRING    [reduce using rule 66 (function_visibility)]
    $default  reduce using rule 19 (visibility)


State 14

    4 VAR_NAME: CLASS_NAME •
   58 class_instance: CLASS_NAME • VAR_NAME EQUAL_SIGN NEW CLASS_NAME BRACKET_LEFT BRACKET_RIGHT

    CLASS_NAME  shift, and go to state 28
    IDENT       shift, and go to state 15

    $default  reduce using rule 4 (VAR_NAME)

    VAR_NAME  go to state 29


State 15

    5 VAR_NAME: IDENT •

    $default  reduce using rule 5 (VAR_NAME)


State 16

   35 variable_assignment: VAR_NAME • EQUAL_SIGN data
   59 member_access: VAR_NAME • DOT VAR_NAME
   61              | VAR_NAME • DOT VAR_NAME BRACKET_LEFT $@8 parameters_start BRACKET_RIGHT

    EQUAL_SIGN  shift, and go to state 30
    DOT         shift, and go to state 31


State 17

   11 class_body: class_identifier • class_body

    PUBLIC      shift, and go to state 12
    PRIVATE     shift, and go to state 13
    CLASS_NAME  shift, and go to state 14
    IDENT       shift, and go to state 15

    CURLY_BRACKET_RIGHT  reduce using rule 8 (class_body)
    $default             reduce using rule 17 (visibility)

    VAR_NAME                 go to state 16
    class_identifier         go to state 17
    class_body               go to state 32
    class_members            go to state 19
    visibility               go to state 20
    variable_declaration     go to state 21
    variable_initialization  go to state 22
    variable_assignment      go to state 23
    class_instance           go to state 24
    member_access            go to state 25
    functions                go to state 26
    function_visibility      go to state 27


State 18

    7 class_identifier: PUBLIC CLASS CLASS_NAME CURLY_BRACKET_LEFT $@1 class_body • CURLY_BRACKET_RIGHT

    CURLY_BRACKET_RIGHT  shift, and go to state 33


State 19

   10 class_body: class_members • class_body

    PUBLIC      shift, and go to state 12
    PRIVATE     shift, and go to state 13
    CLASS_NAME  shift, and go to state 14
    IDENT       shift, and go to state 15

    CURLY_BRACKET_RIGHT  reduce using rule 8 (class_body)
    $default             reduce using rule 17 (visibility)

    VAR_NAME                 go to state 16
    class_identifier         go to state 17
    class_body               go to state 34
    class_members            go to state 19
    visibility               go to state 20
    variable_declaration     go to state 21
    variable_initialization  go to state 22
    variable_assignment      go to state 23
    class_instance           go to state 24
    member_access            go to state 25
    functions                go to state 26
    function_visibility      go to state 27


State 20

   21 variable_declaration: visibility • data_type VAR_NAME $@2 next_declaration
   26 variable_initialization: visibility • arithmetic_type VAR_NAME EQUAL_SIGN expression $@4 next_initialization_exp
   28                        | visibility • non_arithmetic_type VAR_NAME EQUAL_SIGN non_arithmetic_value $@5 next_initialization

    INT      shift, and go to state 35
    CHAR     shift, and go to state 36
    DOUBLE   shift, and go to state 37
    BOOLEAN  shift, and go to state 38
    STRING   shift, and go to state 39

    data_type            go to state 40
    arithmetic_type      go to state 41
    non_arithmetic_type  go to state 42


State 21

   12 class_members: variable_declaration • SEMICOLON

    SEMICOLON  shift, and go to state 43


State 22

   13 class_members: variable_initialization • SEMICOLON

    SEMICOLON  shift, and go to state 44


State 23

   14 class_members: variable_assignment • SEMICOLON

    SEMICOLON  shift, and go to state 45


State 24

   16 class_members: class_instance • SEMICOLON

    SEMICOLON  shift, and go to state 46


State 25

   15 class_members: member_access • SEMICOLON

    SEMICOLON  shift, and go to state 47


State 26

    9 class_body: functions • class_body

    PUBLIC      shift, and go to state 12
    PRIVATE     shift, and go to state 13
    CLASS_NAME  shift, and go to state 14
    IDENT       shift, and go to state 15

    CURLY_BRACKET_RIGHT  reduce using rule 8 (class_body)
    $default             reduce using rule 17 (visibility)

    VAR_NAME                 go to state 16
    class_identifier         go to state 17
    class_body               go to state 48
    class_members            go to state 19
    visibility               go to state 20
    variable_declaration     go to state 21
    variable_initialization  go to state 22
    variable_assignment      go to state 23
    class_instance           go to state 24
    member_access            go to state 25
    functions                go to state 26
    function_visibility      go to state 27


State 27

   63 functions: function_visibility • VOID VAR_NAME BRACKET_LEFT $@9 arguments_start BRACKET_RIGHT CURLY_BRACKET_LEFT inside_void_function CURLY_BRACKET_RIGHT
   65          | function_visibility • data_type VAR_NAME BRACKET_LEFT $@10 arguments_start BRACKET_RIGHT CURLY_BRACKET_LEFT inside_function CURLY_BRACKET_RIGHT

    VOID     shift, and go to state 49
    INT      shift, and go to state 35
    CHAR     shift, and go to state 36
    DOUBLE   shift, and go to state 37
    BOOLEAN  shift, and go to state 38
    STRING   shift, and go to state 39

    data_type            go to state 50
    arithmetic_type      go to state 51
    non_arithmetic_type  go to state 52


State 28

    4 VAR_NAME: CLASS_NAME •

    $default  reduce using rule 4 (VAR_NAME)


State 29

   58 class_instance: CLASS_NAME VAR_NAME • EQUAL_SIGN NEW CLASS_NAME BRACKET_LEFT BRACKET_RIGHT

    EQUAL_SIGN  shift, and go to state 53


State 30

   35 variable_assignment: VAR_NAME EQUAL_SIGN • data

    BRACKET_LEFT   shift, and go to state 54
    MINUS          shift, and go to state 55
    CLASS_NAME     shift, and go to state 28
    IDENT          shift, and go to state 15
    INT_VALUE      shift, and go to state 56
    CHAR_VALUE     shift, and go to state 57
    DOUBLE_VALUE   shift, and go to state 58
    BOOLEAN_VALUE  shift, and go to state 59
    STRING_VALUE   shift, and go to state 60

    VAR_NAME              go to state 61
    data                  go to state 62
    expression            go to state 63
    non_arithmetic_value  go to state 64
    member_access         go to state 65


State 31

   59 member_access: VAR_NAME DOT • VAR_NAME
   61              | VAR_NAME DOT • VAR_NAME BRACKET_LEFT $@8 parameters_start BRACKET_RIGHT

    CLASS_NAME  shift, and go to state 28
    IDENT       shift, and go to state 15

    VAR_NAME  go to state 66


State 32

   11 class_body: class_identifier class_body •

    $default  reduce using rule 11 (class_body)


State 33

    7 class_identifier: PUBLIC CLASS CLASS_NAME CURLY_BRACKET_LEFT $@1 class_body CURLY_BRACKET_RIGHT •

    $default  reduce using rule 7 (class_identifier)


State 34

   10 class_body: class_members class_body •

    $default  reduce using rule 10 (class_body)


State 35

   50 arithmetic_type: INT •

    $default  reduce using rule 50 (arithmetic_type)


State 36

   52 non_arithmetic_type: CHAR •

    $default  reduce using rule 52 (non_arithmetic_type)


State 37

   51 arithmetic_type: DOUBLE •

    $default  reduce using rule 51 (arithmetic_type)


State 38

   53 non_arithmetic_type: BOOLEAN •

    $default  reduce using rule 53 (non_arithmetic_type)


State 39

   54 non_arithmetic_type: STRING •

    $default  reduce using rule 54 (non_arithmetic_type)


State 40

   21 variable_declaration: visibility data_type • VAR_NAME $@2 next_declaration

    CLASS_NAME  shift, and go to state 28
    IDENT       shift, and go to state 15

    VAR_NAME  go to state 67


State 41

   26 variable_initialization: visibility arithmetic_type • VAR_NAME EQUAL_SIGN expression $@4 next_initialization_exp
   48 data_type: arithmetic_type •

    CLASS_NAME  shift, and go to state 28
    IDENT       shift, and go to state 15

    CLASS_NAME  [reduce using rule 48 (data_type)]
    IDENT       [reduce using rule 48 (data_type)]

    VAR_NAME  go to state 68


State 42

   28 variable_initialization: visibility non_arithmetic_type • VAR_NAME EQUAL_SIGN non_arithmetic_value $@5 next_initialization
   49 data_type: non_arithmetic_type •

    CLASS_NAME  shift, and go to state 28
    IDENT       shift, and go to state 15

    CLASS_NAME  [reduce using rule 49 (data_type)]
    IDENT       [reduce using rule 49 (data_type)]

    VAR_NAME  go to state 69


State 43

   12 class_members: variable_declaration SEMICOLON •

    $default  reduce using rule 12 (class_members)


State 44

   13 class_members: variable_initialization SEMICOLON •

    $default  reduce using rule 13 (class_members)


State 45

   14 class_members: variable_assignment SEMICOLON •

    $default  reduce using rule 14 (class_members)


State 46

   16 class_members: class_instance SEMICOLON •

    $default  reduce using rule 16 (class_members)


State 47

   15 class_members: member_access SEMICOLON •

    $default  reduce using rule 15 (class_members)


State 48

    9 class_body: functions class_body •

    $default  reduce using rule 9 (class_body)


State 49

   63 functions: function_visibility VOID • VAR_NAME BRACKET_LEFT $@9 arguments_start BRACKET_RIGHT CURLY_BRACKET_LEFT inside_void_function CURLY_BRACKET_RIGHT

    CLASS_NAME  shift, and go to state 28
    IDENT       shift, and go to state 15

    VAR_NAME  go to state 70


State 50

   65 functions: function_visibility data_type • VAR_NAME BRACKET_LEFT $@10 arguments_start BRACKET_RIGHT CURLY_BRACKET_LEFT inside_function CURLY_BRACKET_RIGHT

    CLASS_NAME  shift, and go to state 28
    IDENT       shift, and go to state 15

    VAR_NAME  go to state 71


State 51

   48 data_type: arithmetic_type •

    $default  reduce using rule 48 (data_type)


State 52

   49 data_type: non_arithmetic_type •

    $default  reduce using rule 49 (data_type)


State 53

   58 class_instance: CLASS_NAME VAR_NAME EQUAL_SIGN • NEW CLASS_NAME BRACKET_LEFT BRACKET_RIGHT

    NEW  shift, and go to state 72


State 54

   46 expression: BRACKET_LEFT • expression BRACKET_RIGHT

    BRACKET_LEFT  shift, and go to state 54
    MINUS         shift, and go to state 55
    CLASS_NAME    shift, and go to state 28
    IDENT         shift, and go to state 15
    INT_VALUE     shift, and go to state 56
    DOUBLE_VALUE  shift, and go to state 58

    VAR_NAME       go to state 61
    expression     go to state 73
    member_access  go to state 65


State 55

   47 expression: MINUS • expression

    BRACKET_LEFT  shift, and go to state 54
    MINUS         shift, and go to state 55
    CLASS_NAME    shift, and go to state 28
    IDENT         shift, and go to state 15
    INT_VALUE     shift, and go to state 56
    DOUBLE_VALUE  shift, and go to state 58

    VAR_NAME       go to state 61
    expression     go to state 74
    member_access  go to state 65


State 56

   38 expression: INT_VALUE •

    $default  reduce using rule 38 (expression)


State 57

   55 non_arithmetic_value: CHAR_VALUE •

    $default  reduce using rule 55 (non_arithmetic_value)


State 58

   39 expression: DOUBLE_VALUE •

    $default  reduce using rule 39 (expression)


State 59

   56 non_arithmetic_value: BOOLEAN_VALUE •

    $default  reduce using rule 56 (non_arithmetic_value)


State 60

   57 non_arithmetic_value: STRING_VALUE •

    $default  reduce using rule 57 (non_arithmetic_value)


State 61

   40 expression: VAR_NAME •
   59 member_access: VAR_NAME • DOT VAR_NAME
   61              | VAR_NAME • DOT VAR_NAME BRACKET_LEFT $@8 parameters_start BRACKET_RIGHT

    DOT  shift, and go to state 31

    $default  reduce using rule 40 (expression)


State 62

   35 variable_assignment: VAR_NAME EQUAL_SIGN data •

    $default  reduce using rule 35 (variable_assignment)


State 63

   36 data: expression •
   42 expression: expression • PLUS expression
   43           | expression • MINUS expression
   44           | expression • MULTIPLY expression
   45           | expression • DIVIDE expression

    PLUS      shift, and go to state 75
    MINUS     shift, and go to state 76
    MULTIPLY  shift, and go to state 77
    DIVIDE    shift, and go to state 78

    $default  reduce using rule 36 (data)


State 64

   37 data: non_arithmetic_value •

    $default  reduce using rule 37 (data)


State 65

   41 expression: member_access •

    $default  reduce using rule 41 (expression)


State 66

   59 member_access: VAR_NAME DOT VAR_NAME •
   61              | VAR_NAME DOT VAR_NAME • BRACKET_LEFT $@8 parameters_start BRACKET_RIGHT

    BRACKET_LEFT  shift, and go to state 79

    $default  reduce using rule 59 (member_access)


State 67

   21 variable_declaration: visibility data_type VAR_NAME • $@2 next_declaration

    $default  reduce using rule 20 ($@2)

    $@2  go to state 80


State 68

   26 variable_initialization: visibility arithmetic_type VAR_NAME • EQUAL_SIGN expression $@4 next_initialization_exp

    EQUAL_SIGN  shift, and go to state 81


State 69

   28 variable_initialization: visibility non_arithmetic_type VAR_NAME • EQUAL_SIGN non_arithmetic_value $@5 next_initialization

    EQUAL_SIGN  shift, and go to state 82


State 70

   63 functions: function_visibility VOID VAR_NAME • BRACKET_LEFT $@9 arguments_start BRACKET_RIGHT CURLY_BRACKET_LEFT inside_void_function CURLY_BRACKET_RIGHT

    BRACKET_LEFT  shift, and go to state 83


State 71

   65 functions: function_visibility data_type VAR_NAME • BRACKET_LEFT $@10 arguments_start BRACKET_RIGHT CURLY_BRACKET_LEFT inside_function CURLY_BRACKET_RIGHT

    BRACKET_LEFT  shift, and go to state 84


State 72

   58 class_instance: CLASS_NAME VAR_NAME EQUAL_SIGN NEW • CLASS_NAME BRACKET_LEFT BRACKET_RIGHT

    CLASS_NAME  shift, and go to state 85


State 73

   42 expression: expression • PLUS expression
   43           | expression • MINUS expression
   44           | expression • MULTIPLY expression
   45           | expression • DIVIDE expression
   46           | BRACKET_LEFT expression • BRACKET_RIGHT

    BRACKET_RIGHT  shift, and go to state 86
    PLUS           shift, and go to state 75
    MINUS          shift, and go to state 76
    MULTIPLY       shift, and go to state 77
    DIVIDE         shift, and go to state 78


State 74

   42 expression: expression • PLUS expression
   43           | expression • MINUS expression
   44           | expression • MULTIPLY expression
   45           | expression • DIVIDE expression
   47           | MINUS expression •

    $default  reduce using rule 47 (expression)


State 75

   42 expression: expression PLUS • expression

    BRACKET_LEFT  shift, and go to state 54
    MINUS         shift, and go to state 55
    CLASS_NAME    shift, and go to state 28
    IDENT         shift, and go to state 15
    INT_VALUE     shift, and go to state 56
    DOUBLE_VALUE  shift, and go to state 58

    VAR_NAME       go to state 61
    expression     go to state 87
    member_access  go to state 65


State 76

   43 expression: expression MINUS • expression

    BRACKET_LEFT  shift, and go to state 54
    MINUS         shift, and go to state 55
    CLASS_NAME    shift, and go to state 28
    IDENT         shift, and go to state 15
    INT_VALUE     shift, and go to state 56
    DOUBLE_VALUE  shift, and go to state 58

    VAR_NAME       go to state 61
    expression     go to state 88
    member_access  go to state 65


State 77

   44 expression: expression MULTIPLY • expression

    BRACKET_LEFT  shift, and go to state 54
    MINUS         shift, and go to state 55
    CLASS_NAME    shift, and go to state 28
    IDENT         shift, and go to state 15
    INT_VALUE     shift, and go to state 56
    DOUBLE_VALUE  shift, and go to state 58

    VAR_NAME       go to state 61
    expression     go to state 89
    member_access  go to state 65


State 78

   45 expression: expression DIVIDE • expression

    BRACKET_LEFT  shift, and go to state 54
    MINUS         shift, and go to state 55
    CLASS_NAME    shift, and go to state 28
    IDENT         shift, and go to state 15
    INT_VALUE     shift, and go to state 56
    DOUBLE_VALUE  shift, and go to state 58

    VAR_NAME       go to state 61
    expression     go to state 90
    member_access  go to state 65


State 79

   61 member_access: VAR_NAME DOT VAR_NAME BRACKET_LEFT • $@8 parameters_start BRACKET_RIGHT

    $default  reduce using rule 60 ($@8)

    $@8  go to state 91


State 80

   21 variable_declaration: visibility data_type VAR_NAME $@2 • next_declaration

    COMMA  shift, and go to state 92

    $default  reduce using rule 22 (next_declaration)

    next_declaration  go to state 93


State 81

   26 variable_initialization: visibility arithmetic_type VAR_NAME EQUAL_SIGN • expression $@4 next_initialization_exp

    BRACKET_LEFT  shift, and go to state 54
    MINUS         shift, and go to state 55
    CLASS_NAME    shift, and go to state 28
    IDENT         shift, and go to state 15
    INT_VALUE     shift, and go to state 56
    DOUBLE_VALUE  shift, and go to state 58
